# juntagrico

./: .codeclimate.yml  .coveragerc  .gitignore  .htaccess  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Dockerfile  LICENCE.txt  MANIFEST.in  Makefile  Procfile  README.md  README.rst  deploytestsettings.py  docker-compose.yml  index.html  make_language.sh  manage.py  ortoloco.wsgi  pyproject.toml  replace.sh  requirements-dev.txt  requirements-local.txt  requirements-mac-upgradeall.txt  requirements-mac.txt  requirements.txt  ruff.toml  settings_local.py  settings_oli.py  setup.cfg  setup.py  testsettings.py  testurls.py  yourdatabasename.2db  yourdatabasename.db
.github/: pull_request_template.md
.github/workflows/: juntagrico-ci.yml  python-package.yml  python-publish.yml
django_cron/: base.py
docs/: 1_2_release_notes.rst  1_3_release_notes.rst  1_4_release_notes.rst  1_5_release_notes.rst  1_6_release_notes.rst  addons.rst  conf.py  development.rst  extensions.rst  first_steps.rst  index.rst  instalation.rst  permissions.rst  release_notes.rst  requirements.txt  rich_text_editor.rst  settings.rst  theming.rst
docs/contribute/: addons.rst  development.rst  documentation.rst
docs/intro/: advanced.rst  basic.rst  first-steps.rst  installation.rst
docs/reference/: commands.rst  exports.rst  extensions.rst  hooks.rst  notifications.rst  permissions.rst  settings.rst  signals.rst  templates.rst
docs/release_notes/: 1-1.rst  1-2.rst  1-4.rst  1-5.rst
juntagrico/: __init__.py  admin.py  admin_helpers.py  admin_sites.py  apps.py  checks.py  config.py  context_processors.py  decorators.py  defaults.py  filters.py  forms.py  helpers.py  juntagricoapp.py  mailer.py  model_audit.py  models.py  signals.py  tests.py  urls.py  view_decorators.py  views.py  views_abo.py  views_admin.py  views_create_subscription.py  views_iso20022.py  views_subscription.py
juntagrico/admins/: __init__.py  admin_decorators.py  area_admin.py  assignment_admin.py  auth_admin.py  base_admin.py  billing_period_admin.py  delivery_admin.py  depot_admin.py  extra_subscription_admin.py  extra_subscription_category_admin.py  extra_subscription_type_admin.py  filters.py  job_admin.py  job_extra_admin.py  job_extra_type_admin.py  job_type_admin.py  list_message_admin.py  location_admin.py  member_admin.py  membership_admin.py  one_time_job_admin.py  share_admin.py  subscription_admin.py  subscription_product_admin.py  subscription_size_admin.py  subscription_type_admin.py  text_override_admin.py  tour_admin.py
juntagrico/backends/: email.py
juntagrico/dao/: activityareadao.py  assignmentdao.py  billingperioddao.py  deliverydao.py  depotdao.py  extrasubbillingperioddao.py  extrasubscriptioncategorydao.py  extrasubscriptiondao.py  extrasubscriptiontypedao.py  jobdao.py  jobextradao.py  jobtypedao.py  listmessagedao.py  mailtemplatedao.py  memberdao.py  sharedao.py  subscriptiondao.py  subscriptionmembershipdao.py  subscriptionpartdao.py  subscriptionproductdao.py  subscriptionsizedao.py  subscriptiontypedao.py
juntagrico/downgrade/: urls.py  urls_1_5.py
juntagrico/entity/: __init__.py  billing.py  contact.py  delivery.py  depot.py  extrasubs.py  jobs.py  listmessage.py  location.py  mailing.py  member.py  membership.py  share.py  subs.py  subtypes.py  textoverride.py
juntagrico/forms/: __init__.py  account.py  email.py  job.py  membership.py  signup.py  subscription.py
juntagrico/lifecycle/: __init__.py  extrasub.py  job.py  member.py  membership.py  share.py  simplestate.py  sub.py  submembership.py  subpart.py
juntagrico/mailer/: __init__.py  adminnotification.py  emailsender.py  formemails.py  membernotification.py
juntagrico/management/: __init__.py
juntagrico/migrations/: 0001_initial.py  0001_squashed_0040_post_1_6.py  0001_squashed_0051_initial.py  0002_auto_20170421_1658.py  0002_auto_20170922_1204.py  0003_auto_20160119_1113.py  0003_auto_20170426_0958.py  0003_auto_20171011_2034.py  0003_auto_20171013_2124.py  0004_auto_20160119_1401.py  (+109 more)
juntagrico_legacy/: urls.py  views.py
juntagrico_test_addon/: admin.py  apps.py  juntagricoapp.py  models.py
loco_app/: admin.py  model_audit.py  models.py  views.py
my_ortoloco/: admin.py  admin_helpers.py  cron.py  decorators.py  filters.py  forms.py  helpers.py  mailer.py  model_audit.py  models.py  views.py  views_abo.py  views_admin.py
ortoloco/: myurlsredirect.py  settings.py  urls.py  utils.py  wsgi.py
settings/: deployment.py  dev.py  legacy.py  minimal.py
static_ortoloco/: admin.py  models.py  views.py
test/: subscription_test_base.py  test_admin.py  test_admin_actions.py  test_adminforms.py  test_areas.py  test_assignments.py  test_bills.py  test_comember.py  test_contact.py  test_cs.py  test_deliveries.py  test_deploy.py  test_depot_change.py  test_depot_list_generation.py  test_export.py  test_extra_subs.py  test_filter.py  test_generate_testdata.py  test_generate_testdata_advanced.py  test_home.py  test_iso20022.py  test_jobs.py  test_lifecycle.py  test_lists.py  test_mailer.py  test_man_list.py  test_manage_cmds.py  test_management_commands.py  test_profile.py  test_shares.py  test_simple_pages.py  test_sub_admin.py  test_subs.py  test_temporal.py
urls/: dev.py  legacy.py  minimal.py
(+930 files in other folders)
