[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "juntagrico"
description = "juntagrico is a management platform for community gardens and vegetable cooperatives."
authors = [
    {name = "juntagrico", email = "python@juntagrico.org"},
]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dependencies = [
    "Django~=5.2.3",
    "django-admin-sortable2~=2.3.0",
    "django-crispy-forms~=2.5.0",
    "crispy-bootstrap4~=2025.6.0",
    "django-impersonate~=1.9.5",
    "django-polymorphic~=4.4.1",
    "django-richtextfield~=1.6.1",
    "django-select2~=8.4.1",
    "django-import-export~=4.3.6",
    "icalendar~=6.3.0",
    "schwifty==2025.09.0",
    "xhtml2pdf==0.2.17",
    "svglib<1.6.0",
    "XlsxWriter~=3.2.3",
    "python-dateutil~=2.9.0",
    "fontawesomefree~=6.6.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://www.juntagrico.org"
Issues = "https://github.com/juntagrico/juntagrico/issues"
Documentation = "https://juntagrico.readthedocs.io"

[tool.setuptools.packages.find]
include = ['juntagrico', 'juntagrico.*']

[tool.setuptools.dynamic]
version = {attr = "juntagrico.__version__"}

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "django-coverage-plugin>=3.2.0",
    "faker>=40.1.0",
    "pre-commit>=4.5.1",
    "psycopg>=3.1.8",
    "ruff>=0.14.11",
]
